Support DATABASE_URL for simpler cloud deployment

--- a/go-backend/.env.example
+++ b/go-backend/.env.example
@@ -1,6 +1,11 @@
 # Database Configuration
-# For local development with PostgreSQL (use sslmode=disable)
-# For production with Supabase/Render (use sslmode=require or omit - defaults to require)
+#
+# OPTION 1: Use DATABASE_URL
+# Simply copy the connection string from your database provider (Supabase, Render, etc.)
+# Example: postgresql://postgres.abcdefgh:password@db.example.supabase.co:6543/postgres?sslmode=require
+# DATABASE_URL=your_connection_string_here
+#
+# OPTION 2 (For local development): Use individual variables
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
