Update project name to My Spendo

--- a/go-backend/.env.example
+++ b/go-backend/.env.example
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_database_password_here
-DB_NAME=expense_tracker
+DB_NAME=myspendo
 DB_SSLMODE=disable
 
 # JWT Secret (MUST be a strong random secret in production)
